Sun Jul 15 13:08:50 UTC 2007  Abdullah Sowayan  <abdullah.sowayan@lmco.com>

        * ace/Malloc.h:
        * ace/OS_NS_stdio.inl:
        * ace/OS_NS_stropts.cpp:
        * ace/OS_NS_unistd.cpp:
        * ace/Object_Manager_Base.cpp:
        * ace/QoS/QoS_Session_Impl.cpp:
        * ace/Rtems_init.c:
        * ace/SOCK_Dgram.cpp:
        * ace/SOCK_Dgram_Mcast.cpp:
        * ace/SOCK_SEQPACK_Connector.inl:
        * ace/SSL/SSL_Asynch_BIO.cpp:
        * ace/SSL/SSL_Context.cpp:
        * ace/Sock_Connect.cpp:
        * ace/os_include/os_stddef.h:

          Fixed Fuzz warnings regarding the usage of NULL. Prefer the usage of 0 instead
          of NULL.

Sun Jul 15 04:21:44 UTC 2007  Phil Mesnier  <mesnier_p@ociweb.com>

        * bin/msvc_static_order.lst:
          Add a new pre-build project to the list. This resolves msvc
          static build errors.

Sat Jul 14 15:03:39 UTC 2007  Abdullah Sowayan  <abdullah.sowayan@lmco.com>

        * performance-tests/Misc/childbirth_time.cpp:
        * performance-tests/Misc/preempt.cpp:
        * performance-tests/Misc/test_guard.cpp:
        * performance-tests/Misc/test_naming.cpp:
        * performance-tests/RPC/client.cpp:
        * performance-tests/SCTP/SOCK_SEQPACK_clt.cpp:
        * performance-tests/SCTP/SOCK_STREAM_clt.cpp:
        * performance-tests/SCTP/hist.cpp:
        * performance-tests/Server_Concurrency/Queue_Based_Workers/RT_CORBA_Workers.cpp:
        * performance-tests/Synch-Benchmarks/Base_Test/Baseline_Test.cpp:
        * performance-tests/Synch-Benchmarks/Perf_Test/guard_test.cpp:
        * performance-tests/TCP/tcp_test.cpp:
        * performance-tests/TTCP/C/new-ttcp.cpp:
        * performance-tests/UDP/udp_test.cpp:

          Fixed ACE_OS fuzz warnings. Use ACE_OS calls instead of raw OS function
          where possible. If fuzz detected a false-positive, then disable
          the ACE_OS fuzz check for that section of the code.
